# view

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  leptos-test1-b4d4c21eb59daa43_bg.wasm  package-lock.json  package.json
.github/workflows/: vercel.yaml
docs/: index.html  view-dd4b9d78f1b9c1da.js  view-dd4b9d78f1b9c1da_bg.wasm  view-ede113af0785feed.js  view-ede113af0785feed_bg.wasm
src/: lib.rs  main.rs
src/render/: mod.rs  render.rs  shader.wgsl  view_core.rs  view_data.rs  viewer.rs
src/ui/: canvas.rs  mod.rs
style/: output.css
