[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
gpf = { git = "https://github.com/liukaizheng/gpf.git", branch = "main" }
tobj = { version = "4.0.0", features = ["use_f64"], default-features = false }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wgpu = { version = "0.18.0", features = ["webgl"] }
pollster = "0.3.0"
winit = "0.29.3"
anyhow = "1.0.75"
bitflags = "2.4.1"
cgmath = "0.18.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    'Blob',
    'BlobPropertyBag',
    'CssStyleDeclaration',
    'CustomEvent',
    'ReadableStream',
    'File',
    'FileList',
    'FileReader',
    'HtmlElement',
    "HtmlInputElement",
]
