[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr", "nightly"] }
gpf = { git = "https://github.com/liukaizheng/gpf.git", branch = "main" }
tobj = { version = "4.0", features = ["use_f64"], default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wgpu = "0.20"
pollster = "0.3.0"
winit = "0.30"
anyhow = "1.0.75"
bitflags = "2.4.1"
cgmath = "0.18.0"
bytemuck = { version = "1.15", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    'Blob',
    'BlobPropertyBag',
    'CssStyleDeclaration',
    'CustomEvent',
    'ReadableStream',
    'File',
    'FileList',
    'FileReader',
    'HtmlElement',
    "HtmlInputElement",
]
